fix(dataModel-label): Fixed the DataModel label from overflowing on mobile devices

--- a/src/style/layout/_tree.scss
+++ b/src/style/layout/_tree.scss
@@ -273,3 +273,7 @@ ul.favourites li:focus {
     margin-right: 10px;
   }
 }
+
+.dataModelDetailsLabel {
+  word-break: break-word;
+}
